--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             
             <button type="submit">Продолжить</button>
         </form>
-        <p class="login-link">Зарегистрировать <a href="register.html">аккаунт</a></p>
+        <p class="login-link">Зарегистрировать <a href="index.html">аккаунт</a></p>
     </div>
 </body>
 <script src="log.js" defer></script>
