ended up fixing

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <main class="mainPage">
         <h1>Страница Пользователя</h1>
         <ul>
-            <li><a href="register.html">На страницу регистрации</a></li>
+            <li><a href="index.html">На страницу регистрации</a></li>
         </ul>
     </main>
     
