--- a/login.html
+++ b/login.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Авторизация</title>
+    <title>App_by_DEAF — Авторизация</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="img.ico">
 </head>
 <body>
     <div class="registration-container">
