--- a/main.html
+++ b/main.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Страница пользователя</title>
+    <title>App_by_DEAF — Страница пользователя</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="img.ico">
 </head>
 <body>
     <main class="mainPage">
