--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>App_by_DEAF — Страница пользователя</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="img.ico">
+    <link rel="icon" href="img.ico">
 </head>
 <body>
     <main class="mainPage">
